--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -68,7 +68,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="24dp"
-        android:background="@null"
+        android:background="@drawable/edittext_rounded_corners_border"
         android:ems="10"
         android:inputType="textMultiLine"
         android:text="Name"
