--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -62,11 +62,13 @@
 
     <EditText
         android:id="@+id/editText"
+        style="@style/Base.Widget.MaterialComponents.TextInputEditText"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="80dp"
         android:background="@drawable/edittext_rounded_corners_border"
         android:ems="10"
         android:gravity="top"
